RESOLVED FIXED 255813
window.open from an iframe doesn't exit fullscreen for parent document
https://bugs.webkit.org/show_bug.cgi?id=255813
Summary window.open from an iframe doesn't exit fullscreen for parent document
Aditya Keerthi
Reported 2023-04-21 15:17:12 PDT
Observable on gamespot.com: 1. http://gamespot.com/videos/ 2. Play a video 3. Enter fullscreen while the ad is playing 4. Click on an ad Fullscreen is not exited.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-21 15:17:34 PDT
Aditya Keerthi
Comment 2 2023-04-21 16:04:39 PDT
EWS
Comment 3 2023-04-22 15:41:33 PDT
Committed 263284@main (0aa6c9026a53): <https://commits.webkit.org/263284@main> Reviewed commits have been landed. Closing PR #13054 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.